# mev

./: Cargo.toml  README.md  build.rs  index.html
.github/workflow/: check-all-targets.yml
.github/workflows/: check-all-targets.yml  msrv.yml
examples/: triangle.rs  vertex.rs
examples/shaders/: triangle.wgsl
proc/: Cargo.toml
proc/impl/: Cargo.toml
proc/impl/src/: args.rs  auto_repr.rs  lib.rs  match.rs  repr.rs  vertex.rs
proc/impl/src/metal/: arguments.rs
proc/impl/src/vulkan/: arguments.rs
proc/impl/src/webgpu/: arguments.rs
proc/src/: lib.rs
src/: lib.rs  traits.rs
src/generic/: acst.rs  arguments.rs  buffer.rs  compute.rs  data.rs  feature.rs  format.rs  image.rs  instance.rs  mod.rs  render.rs  render_pipeline.rs  sampler.rs  shader.rs  stages.rs  surface.rs
src/metal/: buffer.rs  command.rs  compute.rs  device.rs  from.rs  image.rs  instance.rs  mod.rs  queue.rs  render_pipeline.rs  shader.rs  surface.rs
src/vulkan/: arguments.rs  buffer.rs  command.rs  compute.rs  device.rs  from.rs  image.rs  instance.rs  layout.rs  mod.rs  queue.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs
src/webgl/: arguments.rs  buffer.rs  command.rs  device.rs  image.rs  instance.rs  mod.rs  queue.rs  sampler.rs  shader.rs  surface.rs
src/webgpu/: acst.rs  arguments.rs  buffer.rs  command.rs  compute.rs  convert.rs  device.rs  from.rs  image.rs  instance.rs  mod.rs  queue.rs  render.rs  sampler.rs  shader.rs  surface.rs
