[package]
name = "mev"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Metal Et Vulkan abstraction"

[features]
debug = []
inline-more = []

[dependencies]
mev-proc = { version = "=0.1.0", path = "proc" }

foldhash.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
codespan-reporting.workspace = true
hashbrown.workspace = true
hidden-trait.workspace = true
parking_lot.workspace = true
raw-window-handle.workspace = true
slab.workspace = true
smallvec.workspace = true
tracing.workspace = true

[target.'cfg(any(windows, all(unix, not(any(target_os = "macos", target_os = "ios")))))'.dependencies]
ash.workspace = true
gpu-alloc.workspace = true
naga = { workspace = true, features = ["spv-out"] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal.workspace = true
objc.workspace = true
core-graphics-types.workspace = true
foreign-types.workspace = true
naga = { workspace = true, features = ["msl-out"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
web-sys = { workspace = true, features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { workspace = true }
naga = { workspace = true, features = ["glsl-out"] }

[dev-dependencies]
winit = "0.30.12"

[workspace]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Zakarum <zaq.dev@icloud.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
foldhash = { version = "0.2" }
ash = { version = "0.38.0", features = ["loaded"] }
bitflags = "2.10.0"
bytemuck = { version = "1.24", features = ["derive", "min_const_generics"] }
codespan-reporting = "0.13.1"
core-graphics-types = { version = "0.2" }
foreign-types = { version = "0.5" }
#gpu-alloc = { version = "0.6" }
gpu-alloc = { version = "0.6", path = "../gpu-alloc/gpu-alloc" }
hashbrown = { version = "0.16.1" }
hidden-trait = "0.1"
libloading = "0.9.0"
metal = { version = "0.32.0" }
naga = { version = "27.0.3", features = ["spv-in", "wgsl-in", "glsl-in"] }
objc = { version = "0.2" }
parking_lot = "0.12.5"
proc-macro2 = "1.0.103"
proc-easy = "0.4.0"
quote = "1"
raw-window-handle = "0.6"
slab = "0.4.11"
smallvec = "1.15.1"
syn = "2.0.110"
tracing = "0.1.41"

js-sys = "0.3.82"
web-sys = "0.3.82"
wasm-bindgen = "0.2.105"


[profile.dev.package.foldhash]
opt-level = 3

[profile.dev.package.metal]
opt-level = 3

[profile.dev.package.hashbrown]
opt-level = 3

[profile.dev.package.ash]
opt-level = 3

[[example]]
name = "triangle"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mev_backend, values("vulkan", "metal", "webgl"))'] }