[package]
name = "mev-proc"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "mev procedural macros"

[lib]
proc-macro = true

[dependencies]
mev-proc-impl = { version = "=0.1.1", path = "impl" }
proc-macro2.workspace = true
quote.workspace = true
