[package]
name = "mev-proc-impl"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "mev procedural macros implementation"

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
proc-easy.workspace = true
